# leopard

./: .env.docker.example  .gitignore  AGENTS.md  CALENDAR_PERMISSIONS_GUIDE.md  CLAUDE.md  DOCKER_DEPLOYMENT.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env  .env.example  AGENTS.md  Dockerfile  Dockerfile.dev  FIX_CONSULTANT_PERMISSIONS_ACCESS.md  NOTIFICATION_TASK_VIEWSET_ALIGNMENT.md  QUICK_START_PERMISSIONS.md  README.md  SIMPLIFIED_GROUP_IMPLEMENTATION.md  TASK_INSERTS_README.md  TESTING_SSE_LOCALLY.md  docker-compose.yml  dummysheet.xlsx  entrypoint.sh  generate_task_inserts.py  healthcheck.sh  main.py  notes.md  openapi-schema.yaml  pyproject.toml  requirements.txt  test_api_permissions_endpoint.py  test_consultant_permissions.py  test_multi_tenant_updates.py  test_permissions.py  test_sse.html  test_sse_auth.py  test_tenant_jwt_security.py  test_tenant_setup.py  verify_consultant_fix.py
backend/deployment/: deploy.sh  userdata.sh
backend/deployment/certbot/: init-letsencrypt.sh
backend/deployment/daphne/: daphne.service  daphne.socket
backend/deployment/nginx/: nginx.conf
backend/deployment/scripts/: daphne.sh  nginx.sh  python_dependencies.sh  start_app.sh
backend/dev/: APIRequest.http  commands.txt  http-client.env.json
backend/dev/responses/: clients.json  notifications.json  tasks.json
backend/docs/: CREATE_FIRST_TENANT_PRODUCTION.md  IMPLEMENTATION_SUMMARY.md  MULTI_TENANT_JWT_AUTH.md  MULTI_TENANT_MIGRATION_SUMMARY.md  MULTI_TENANT_ROLE_UPDATES.md  QUICK_TEST_SSE.md  ROLE_PERMISSIONS_IMPLEMENTATION.md  update_tenant_domains.py
backend/immigration/: admin.py  apps.py  authentication.py  constants.py  consumers.py  institute.py  middleware.py  models.py  notification_manager.py  pagination.py  permissions.py  serializer.py  signals.py  task.py  user.py  views.py
backend/immigration/application/: application.py  application_stage.py  application_type.py
backend/immigration/client/: client.py.old  experience.py  lpe.py  passport.py  proficiency.py  qualification.py
backend/immigration/events/: __init__.py  apps.py  cleanup.py  conditions.py  config.py  control.py  dispatcher.py  models.py  processor.py  state_tracker.py
backend/immigration/migrations/: 0001_initial.py  0002_agent_deleted_at.py  0002_remove_task_legacy_fields.py  0003_alter_agent_options_alter_agent_agent_type_and_more.py  0003_make_task_assigned_to_optional.py  0004_add_task_branch_assignment.py  0004_task_remove_application_application_type_and_more.py  0005_alter_broadfield_options_alter_course_options_and_more.py  0005_branch_deleted_at.py  0006_applicationtype_stage_collegeapplication_and_more.py  0006_client_profile_models.py  0007_remove_stage_soft_delete.py  0007_sync_role_to_group.py  0008_calendarevent.py  0008_multi_tenant_role_updates.py  0009_alter_calendarevent_options_and_more.py  0009_remove_role_field_use_groups_only.py  (+9 more)
backend/leopard/: asgi.py  settings.py  urls.py  wsgi.py
backend/tenants/: admin.py  csrf_middleware.py  middleware.py  models.py
(+418 files in other folders)
