[project]
name = "leopard-backend"
version = "1.0.0"
description = "Immigration CRM Backend - Django REST API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Leopard Team" }
]

dependencies = [
    # Django Core
    "django>=4.2,<5.0",
    "django-tenants>=3.5.0,<4.0",
    "djangorestframework>=3.14,<4.0",
    "djangorestframework-simplejwt>=5.3,<6.0",
    "django-cors-headers>=4.3,<5.0",
    "django-filter>=23.3,<24.0",
    "django-countries>=7.6,<8.0",
    "django-money>=3.5,<4.0",
    "django-soft-delete>=1.0,<2.0",
    
    # ASGI / Channels / WebSocket
    "channels>=4.1,<5.0",
    "daphne>=4.1,<5.0",
    "uvicorn>=0.30,<1.0",
    "websockets>=12.0,<13.0",
    
    # Database
    "psycopg2-binary>=2.9,<3.0",
    
    # API Documentation
    "drf-spectacular>=0.27,<1.0",
    
    # Data Processing
    "pandas>=2.2,<3.0",
    "numpy>=2.0,<3.0",
    "openpyxl>=3.1,<4.0",
    
    # Image Processing
    "pillow>=10.0,<11.0",
    
    # Validation & Serialization
    "pydantic>=2.8,<3.0",
    "email-validator>=2.3,<3.0",
    
    # Security & Auth
    "pyjwt>=2.8,<3.0",
    "cryptography>=42.0,<43.0",
    
    # HTTP & Networking
    "requests>=2.32,<3.0",
    "httptools>=0.6,<1.0",
    
    # Utilities
    "django-environ>=0.11,<1.0",
    "pyyaml>=6.0,<7.0",
    "whitenoise>=6.6,<7.0",
    "gunicorn>=21.2,<22.0",
    
    # Async Support
    "anyio>=4.4,<5.0",
    "watchfiles>=0.22,<1.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.8,<25.0",
    "ruff>=0.6,<1.0",
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<5.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["leopard", "immigration"]

[tool.uv]
dev-dependencies = [
    "black>=24.8,<25.0",
    "ruff>=0.6,<1.0",
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<5.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "migrations",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "leopard.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
